--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   assets:
     - images/fundo.jpg
     - images/logo.png
+    - images/torneios.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
