Implementando página de cadastro de torneio.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
   shared_preferences: ^0.5.7+2
+  find_dropdown: ^0,1,7+1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,7 @@ flutter:
     - images/fundo.jpg
     - images/logo.png
     - images/torneios.png
+    - images/camera.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
