--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ flutter:
     - images/logo.png
     - images/torneios.png
     - images/camera.png
+    - images/group.png
+    - images/setaMenor.jpg
+    - images/setaMaior.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
