--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.0+1
   shared_preferences: ^0.5.7+2
   find_dropdown: ^0,1,7+1
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
